activity gemaakt zodat mensen hun readings kunnen zien

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
 
         <activity android:name="com.example.micapp.ui.SaveReadingActivity" />
         <activity android:name="com.example.micapp.ui.CustomizeActivity" />
+        <activity android:name="com.example.micapp.ui.ViewReadingsActivity"/>
+
 
 
     </application>
