nu meer debuggen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name="com.example.micapp.ui.SaveReadingActivity" />
         <activity android:name="com.example.micapp.ui.CustomizeActivity" />
         <activity android:name="com.example.micapp.ui.ViewReadingsActivity"/>
+        <activity android:name="com.example.micapp.ui.ViewAddressesCategoriesActivity"/>
 
 
 
